3::kubernetes/manifests/smartcow-ingress-be.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartcow
  namespace : smartcow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: smartcow-app-service
      http:
        paths:
          - path: /stats
            pathType: Suffix
            backend:
              service:
                name: smartcow-app-service
                port:
                  number: 5000
